[tool.poetry]
name = "tax_residence"
version = "0.1.0"
description = ""
authors = ["Kazybek Askarbek <k.askarbek@innopolis.university>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
